<resources>
    <string name="app_name">Binar CC 6</string>
    <string name="logo">logo</string>
    <string name="keluar">EXIT</string>
    <string name="batu">rock</string>
    <string name="kertas">paper</string>
    <string name="gunting">scissor</string>
    <string name="pemain_1">Player 1</string>
    <string name="pemain2">PLAYER 2</string>
    <string name="logo_game">Logo Game</string>
    <string name="pemain_lawan_pemain">Player vs player</string>
    <string name="slide_1_of_3" translatable="false">Slide 1 of 3</string>
    <string name="slide_2_of_3" translatable="false">Slide 2 of 3</string>
    <string name="next_slide" translatable="false">Next slide</string>
    <string name="slide_3_of_3" translatable="false">Slide 3 of 3</string>
    <string name="bermain_suit_melawan_sesama_pemain">Playing match versus player</string>
    <string name="bermain_melawan_komputer">Playing match versus CPU</string>
    <string name="pemain_vs_pemain">Player vs Player</string>
    <string name="pemain_vs_cpu">Player vs CPU</string>
    <string name="cpu">CPU</string>
    <string name="vs_pemain">%1$s vs PLAYER</string>
    <string name="vs_cpu">%1$s vs CPU</string>
    <string name="vs" translatable="false">VS</string>
    <string name="hasil">RESULT</string>
    <string name="selamat_kamu_menang">%1$s WIN!!!</string>
    <string name="ok">OK</string>
    <string name="cpu_menang">CPU WIN!!!</string>
    <string name="hasil_draw">DRAW!!!</string>
    <string name="selamat_pemain_2_menang">PLAYER 2 WIN!!!</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="prepare_yourself">Prepare Yourself!</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="remember_me">Remember me</string>
    <string name="login_failed">Email and password did\'nt match </string>
    <string name="login_success">Login successful </string>
    <string name="field_empty">Email and password can\'t be blank </string>
    <string name="button_profile">Button Profile</string>
    <string name="profile_data">PROFILE DATA</string>
    <string name="button_back">Button back</string>
    <string name="name">Name</string>
    <string name="your_memo_data">YOUR MEMO</string>
    <string name="memo" translatable="false">Memo</string>
    <string name="add_memo">Add Your Memo</string>
    <string name="date">Date</string>
    <string name="btnadd_memo">Add Memo</string>
    <string name="add__memo_success">Add Memo Successful</string>
    <string name="add_memo_failed">Add Memo Failed</string>
    <string name="cancel">Cancel</string>
    <string name="edit_your_memo">Edit Your Memo</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete Memo Successful</string>
    <string name="update_success">Update Memo Successful</string>
    <string name="delete_failed">Delete Memo Failed</string>
    <string name="update_failed">Update Memo Failed</string>

</resources>
