<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/edit_your_memo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TexContent"
        android:layout_marginTop="20dp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditText"
        android:textSize="20sp"
        android:labelFor="@id/edt_date"
        android:autofillHints="@string/memo"
        android:inputType="datetime" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TexContent"
        android:layout_marginTop="20dp"
        android:text="@string/memo" />

    <EditText
        android:id="@+id/edt_add_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditText"
        android:textSize="20sp"
        android:labelFor="@id/edt_add_memo"
        android:autofillHints="@string/memo"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_update_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update"
        android:background="@drawable/ripple_effect" />

    <Button
        android:id="@+id/btn_delete_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delete"
        android:background="@drawable/ripple_effect" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:background="@drawable/ripple_effect" />
</LinearLayout>